# DHTHERO

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  mise.toml
.github/workflows/: ghcr-publish.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_partitions.sql  0003_torrent_hourly_unique_peers.sql  0004_site_settings.sql  0005_detail_perf_indexes.sql  0006_detail_perf_hot_stats_index.sql  0007_detail_perf_analyze.sql  0008_info_hash_varchar.sql  0009_trending_bucket_info_hash_cover.sql  0010_trending_analyze.sql
backend/src/: admin.rs  config.rs  error.rs  main.rs  state.rs
backend/src/api/: dto.rs  handlers.rs  mod.rs
backend/src/crawler/: ingest.rs  mod.rs
backend/src/db/: models.rs  repo.rs
backend/src/domain/: category.rs
backend/src/search/: client.rs  mod.rs  query.rs  sync.rs
docker/backend/: Dockerfile
docker/env/: backend.env.example  frontend.env  meilisearch.env.example  postgres.env
docker/frontend/: Dockerfile  entrypoint.sh
docs/: nginx-host-reverse-proxy.md
frontend/: middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/latest/: page.tsx
frontend/app/login/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: bauhaus-icon.tsx  pagination.tsx  site-preference-controls.tsx  torrent-card.tsx
frontend/lib/: admin-auth.ts  api.ts  format.ts  i18n.ts  login-rate-limit.ts  session-token.ts  site-auth.ts  site-preferences-server.ts  site-preferences.ts  url-safety.ts
(+13 files in other folders)
